tests/test_files_pa3/SemanticErrors/moreThanOneExtendeSameClass.ic
class A {
    D e;
    
    D fooe() {
        return new E();
    }
}

class B extends A {}

class C extends A {}

class D {
    B c;
}

class E extends D {

     static void main(string[] args){}
     
     void bad_assignment3() {
         c_1 = new C();
     }
    
}